--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
     "@prisma/client": "^5.15.1",
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
@@ -18,9 +18,11 @@
     "react": "^18",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
