--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-bootstrap": "^2.10.3",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "styled-components": "^6.1.11"
