--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/modal": "^2.0.36",
+    "@nextui-org/react": "^2.4.2",
     "@prisma/client": "^5.15.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.2.13",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
