--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node ./prisma/seeds/seed"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
@@ -17,21 +18,23 @@
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.23.8",
     "react-bootstrap": "^2.10.3",
+    "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
   }
 }
