--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
