--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.2.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mfm": "file:",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
