--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.15.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.1.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.13",
     "html2canvas": "^1.4.1",
@@ -35,6 +36,8 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
