--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.13",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
