--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nextui-org/modal": "^2.0.36",
     "@nextui-org/react": "^2.4.2",
     "@prisma/client": "^5.15.1",
+    "@tanstack/react-query": "^5.54.1",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
