--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/react": "^2.4.2",
     "@prisma/client": "^5.15.1",
     "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-query-devtools": "^5.75.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "babel-plugin-styled-components": "^2.1.4",
